# career-plan-agents-classic

./: .env.example  .gitignore  README.md  output.txt  pyproject.toml  report.md
output/: career_plan_report.md
src/career_plan_agents_classic/: crew.py  main.py
src/career_plan_agents_classic/config/: agents.yaml  tasks.yaml
