[project]
name = "career_plan_agents_classic"
version = "0.1.0"
description = "career_plan_agents_classic using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[google-genai,litellm,tools]>=1.15.2,<2.0.0",
]

[project.scripts]
career_plan_agents_classic = "career_plan_agents_classic.main:run"
run_crew = "career_plan_agents_classic.main:run"
train = "career_plan_agents_classic.main:train"
replay = "career_plan_agents_classic.main:replay"
test = "career_plan_agents_classic.main:test"
run_with_trigger = "career_plan_agents_classic.main:run_with_trigger"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
